@@ -1,4 +1,10 @@
-SVN - up to r1575
+SVN - up to r1609
++ Fixed battle artifact 'Wizard's Hat' and 'Hourglass'
++ Fixed catapult order destroy objects
++ Added SDL-1.3 build support
++ Fixed "Start with hero in each player.." option
++ Added cast 'Dimension Door', 'Summon Boat', 'Town Gate'
++ Added customizing spells
 + Added pocketpc hardware buttons support
 
 Mar, 7, 2010
